--- a/lesson15/homework/styles.css
+++ b/lesson15/homework/styles.css
@@ -3,12 +3,25 @@ img.task {
     /*max-width: 500px;*/
 }
 
-table.task2 {border: 1px solid grey; width: 420px; height: 140px;}
+table.task2 {
+    border: 1px solid grey;
+    width: 420px;
+    height: 140px;
+}
 table.task2 th{border: 1px solid grey;}
-table.task2 td{border: 1px solid grey; padding-left: 4px;}
+table.task2 td{
+    border: 1px solid grey;
+    padding-left: 4px;
+}
+td.center {text-align:center;}
 
-table.task3 {width: 1200px; border-spacing: 25px 5px;}
-table.task3 td{width: 20%; height: 200px;}
-td.black {background: black;}
-td.deepskyblue {background: deepskyblue;}
-td:hover {background: orange;}
+table.task3 {
+    width: 1200px;
+    border-spacing: 25px 5px;}
+table.task3 td{
+    width: 20%;
+    height: 200px;
+}
+table.task3 td:nth-child(2n+1) {background: black;}
+table.task3 td:nth-child(2n) {background: deepskyblue;}
+table.task3 td:hover {background: orange;}
